	* optimized disk cache
	* optimized .torrent file parsing
	* optimized initialization of storage when adding a torrent
	* added support for adding torrents asynchronously (for improved startup
	  performance)
	* added support for asynchronous disk I/O
	* almost completely changed the storage interface (for custom storage)
	* added support for hashing pieces in multiple threads

1.0.7 release

	* fix ip filter bug when banning peers
	* fix IPv6 IP address resolution in URLs
	* introduce run-time check for torrent info-sections beeing too large
	* fix web seed bug when using proxy and proxy-peer-connections=false
	* fix bug in magnet link parser
	* introduce add_torrent_params flags to merge web seeds with resume data
	  (similar to trackers)
	* fix bug where dont_count_slow_torrents could not be disabled
	* fix fallocate hack on linux (fixes corruption on some architectures)
	* fix auto-manage bug with announce to tracker/lsd/dht limits
	* improve DHT routing table to not create an unbalanced tree
	* fix bug in uTP that would cause any connection taking more than one second
	  to connect be timed out (introduced in the vulnerability path)
	* fixed falling back to sending UDP packets direct when socks proxy fails
	* fixed total_wanted bug (when setting file priorities in add_torrent_params)
	* fix python3 compatibility with sha1_hash

1.0.6 release

	* fixed uTP vulnerability
	* make utf8 conversions more lenient
	* fix loading of piece priorities from resume data
	* improved seed-mode handling (seed-mode will now automatically be left when
	  performing operations implying it's not a seed)
	* fixed issue with file priorities and override resume data
	* fix request queue size performance issue
	* slightly improve UDP tracker performance
	* fix http scrape
	* add missing port mapping functions to python binding
	* fix bound-checking issue in bdecoder
	* expose missing dht_settings fields to python
	* add function to query the DHT settings